--- a/src/styles/color/index.css
+++ b/src/styles/color/index.css
@@ -1,6 +1,7 @@
 /* Harmony */
 
 @import '../../../node_modules/@evilmartians/harmony/dist/css/blue.css';
+@import '../../../node_modules/@evilmartians/harmony/dist/css/emerald.css';
 @import '../../../node_modules/@evilmartians/harmony/dist/css/gray.css';
 
 /* Functional */
