--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -33,6 +33,8 @@
 	<meta property="og:image:height" content="1080">
 
 	<link rel="alternate" type="application/atom+xml" href="{{ meta.domain }}/feed/" title="{{ meta.title }}">
+
+	<script type="module" src="/scripts/index.js" defer></script>
 </head>
 <body class="page__body">
 	{% include 'header.njk' %}
