--- a/src/styles/blocks/footer.css
+++ b/src/styles/blocks/footer.css
@@ -6,7 +6,7 @@
 		1rem,
 		calc((100vw - 1200px) / 2)
 	);
-	border-top: 1px solid var(--color-border);
+	border-top: 1px solid var(--color-border-primary);
 
 	@media (width < 520px) {
 		align-content: start;
@@ -20,6 +20,6 @@
 	}
 
 	a {
-		color: var(--color-text-link);
+		color: var(--color-text-action);
 	}
 }
