--- a/src/styles/blocks/pagination.css
+++ b/src/styles/blocks/pagination.css
@@ -5,23 +5,23 @@
 	justify-content: center;
 
 	a {
+		display: grid;
+		place-items: center;
 		padding: 0.5rem 1rem;
-		color: var(--color-text-link);
+		color: var(--color-text-action);
 		text-decoration: none;
 
 		&:hover {
-			background-color: var(--color-background-link);
+			background-color: var(--color-background-action);
 		}
 
 		&[rel] {
 			padding-inline: 0.5rem;
 
 			&::before {
-				display: grid;
-				margin: auto;
 				width: 1.25rem;
 				height: 1.25rem;
-				background-color: var(--color-text-link);
+				background-color: var(--color-text-action);
 				mask-size: contain;
 				content: '';
 			}
@@ -40,7 +40,7 @@
 		}
 
 		&[aria-current='page'] {
-			background-color: var(--color-background-link);
+			background-color: var(--color-background-action);
 			pointer-events: none;
 		}
 	}
