--- a/src/styles/color/text.css
+++ b/src/styles/color/text.css
@@ -2,8 +2,19 @@
 
 :root {
 	--color-text-primary: light-dark(
-		var(--color-basic-700),
-		var(--color-basic-100)
+		var(--gray-950),
+		var(--gray-50)
 	);
-	--color-text-secondary: var(--color-basic-400);
+	--color-text-primary-inverted: light-dark(
+		var(--gray-50),
+		var(--gray-950)
+	);
+	--color-text-secondary: light-dark(
+		var(--gray-700),
+		var(--gray-400)
+	);
+	--color-text-link: light-dark(
+		var(--blue-600),
+		var(--blue-500)
+	);
 }
