--- a/src/styles/blocks/news.css
+++ b/src/styles/blocks/news.css
@@ -54,8 +54,9 @@
 
 	img {
 		display: block;
-		outline: 1px solid var(--color-border-secondary);
+		outline: 1px solid var(--color-border);
 		outline-offset: -1px;
+		background-color: var(--color-background-secondary);
 	}
 }
 
@@ -65,7 +66,7 @@
 	margin: 0;
 
 	a {
-		color: var(--color-link-normal);
+		color: var(--color-text-link);
 	}
 
 	@media (width >= 1024px) {
