--- a/src/styles/color/background.css
+++ b/src/styles/color/background.css
@@ -2,11 +2,19 @@
 
 :root {
 	--color-background-primary: light-dark(
-		var(--color-basic-100),
-		var(--color-basic-600)
+		var(--gray-50),
+		var(--gray-950)
+	);
+	--color-background-primary-inverted: light-dark(
+		var(--gray-950),
+		var(--gray-50)
 	);
 	--color-background-secondary: light-dark(
-		var(--color-basic-200),
-		var(--color-basic-500)
+		var(--gray-100),
+		var(--gray-900)
+	);
+	--color-background-link: light-dark(
+		var(--blue-200),
+		var(--blue-900)
 	);
 }
