Add hover styles

--- a/src/styles/blocks/footer.css
+++ b/src/styles/blocks/footer.css
@@ -6,7 +6,7 @@
 		1rem,
 		calc((100vw - 1200px) / 2)
 	);
-	border-top: 1px solid var(--color-border-primary);
+	border-top: 1px solid var(--color-border-secondary);
 
 	@media (width < 520px) {
 		align-content: start;
