--- a/src/styles/blocks/pagination.css
+++ b/src/styles/blocks/pagination.css
@@ -13,6 +13,7 @@
 
 		&:hover {
 			background-color: var(--color-background-action);
+			transition: background-color 0.2s linear;
 		}
 
 		&[rel] {
