--- a/src/styles/blocks/related.css
+++ b/src/styles/blocks/related.css
@@ -1,7 +1,7 @@
 /* Related */
 
 .related {
-	border-top: 1px solid var(--color-border-primary);
+	border-top: 1px solid var(--color-border-secondary);
 }
 
 /* Title */
