--- a/src/styles/color/border.css
+++ b/src/styles/color/border.css
@@ -2,6 +2,11 @@
 
 :root {
 	--color-border-primary: light-dark(
+		var(--gray-500),
+		var(--gray-600)
+	);
+
+	--color-border-secondary: light-dark(
 		var(--gray-300),
 		var(--gray-800)
 	);
