--- a/src/styles/blocks/news.css
+++ b/src/styles/blocks/news.css
@@ -58,7 +58,7 @@
 
 	img {
 		display: block;
-		outline: 1px solid var(--color-border);
+		outline: 1px solid var(--color-border-secondary);
 		outline-offset: -1px;
 		background-color: var(--color-background-secondary);
 	}
