--- a/src/styles/blocks/index.css
+++ b/src/styles/blocks/index.css
@@ -5,7 +5,7 @@
 @import 'main.css';
 @import 'news-list.css';
 @import 'news-card.css';
-@import 'news.css';
+@import 'news-article.css';
 @import 'archive.css';
 @import 'not-found.css';
 @import 'related.css';
