--- a/src/styles/blocks/news-article.css
+++ b/src/styles/blocks/news-article.css
@@ -1,6 +1,6 @@
 /* News */
 
-.news {
+.news-article {
 	display: grid;
 	row-gap: 1rem;
 
@@ -16,7 +16,7 @@
 
 /* Header */
 
-.news__header {
+.news-article__header {
 	display: grid;
 	row-gap: 0.25rem;
 
@@ -27,7 +27,7 @@
 
 /* Title */
 
-.news__title {
+.news-article__title {
 	margin: 0;
 	text-wrap: balance;
 	font-size: 2rem;
@@ -45,13 +45,13 @@
 
 /* Date */
 
-.news__date {
+.news-article__date {
 	color: var(--color-text-secondary);
 }
 
 /* Cover */
 
-.news__cover {
+.news-article__cover {
 	@media (width >= 1024px) {
 		grid-area: cover;
 	}
@@ -66,7 +66,7 @@
 
 /* Tags */
 
-.news__tags {
+.news-article__tags {
 	margin: 0;
 
 	a {
