Add dot to the alt

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -4,7 +4,7 @@
 			class="header__image"
 			src="/images/logo.svg"
 			width="48" height="48"
-			alt="Web Standards logo"
+			alt="Web Standards logo."
 		>
 		{% if page.url == '/' %}
 			<h1 class="header__title">{{ meta.title }}</h1>
