--- a/src/styles/blocks/search.css
+++ b/src/styles/blocks/search.css
@@ -129,7 +129,7 @@
 	a {
 		color: inherit;
 		text-decoration: none;
-		font-weight: bold;
+		font-weight: 700;
 
 		&:focus-visible {
 			outline: none;
