--- a/src/styles/blocks/news-article.css
+++ b/src/styles/blocks/news-article.css
@@ -67,10 +67,28 @@
 /* Tags */
 
 .news-article__tags {
+	display: flex;
+	align-items: center;
+	column-gap: 0.25rem;
 	margin: 0;
+	color: var(--color-text-secondary);
+
+	span {
+		margin-right: 0.25rem;
+	}
 
 	a {
-		color: var(--color-text-link);
+		padding: 0.25rem 0.5rem 0.3rem;
+		border: 1px solid var(--color-border-secondary);
+		border-radius: 1rem;
+		color: inherit;
+		text-decoration: none;
+
+		&:hover {
+			border-color: var(--color-border-action);
+			background-color: var(--color-background-action);
+			color: var(--color-text-action);
+		}
 	}
 
 	@media (width >= 1024px) {
