--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -7,7 +7,7 @@
 <html class="page" lang="{{ meta.language }}">
 <head>
 	<meta charset="utf-8">
-	<title>{{ pageTitle }}</title>
+	<title>{{ pageTitle | plainText | safe }}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="/styles/index.css">
@@ -29,12 +29,12 @@
 	<link rel="me" href="https://mastodon.social/@webstandards_dev">
 	<meta name="fediverse:creator" content="@webstandards_dev@mastodon.social">
 
-	<meta name="description" content="{{ pageDescription }}">
+	<meta name="description" content="{{ pageDescription | plainText | safe }}">
 	<meta name="generator" content="{{ eleventy.generator }}">
 
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="{{ pageTitle }}">
-	<meta property="og:description" content="{{ pageDescription }}">
+	<meta property="og:title" content="{{ pageTitle | plainText | safe }}">
+	<meta property="og:description" content="{{ pageDescription | plainText | safe }}">
 	<meta property="og:url" content="{{ pageURL }}">
 
 	<meta property="og:image" content="{{ pageCover }}">
