Refactor draft logic

--- a/src/includes/news-card.njk
+++ b/src/includes/news-card.njk
@@ -3,7 +3,10 @@
 {% set coverSizes = '(min-width: 1232px) 288px, (min-width: 928px) calc(33.3vw - 4rem), (min-width: 624px) calc(50vw - 3rem), calc(100vw - 2rem)' %}
 
 {% macro newsCard(news, fetchpriority='') %}
-	<article class="news-card">
+	<article
+		class="news-card"
+		{{ 'data-draft' if news.data.draft else '' }}
+	>
 		{{ cover(
 			url=news.url,
 			sizes=coverSizes,
