--- a/src/pages/tags/index.njk
+++ b/src/pages/tags/index.njk
@@ -4,7 +4,7 @@
 	<h1 class="archive__title">News with the “{{ tag }}” tag</h1>
 	<ul class="news-list">
 	{%- for item in collections[tag] | reverse %}
-		{%- if isDev or item.data.permalink !== false %}
+		{%- if isDev or not item.data.draft %}
 		<li>
 			{{ newsCard(news=item, fetchpriority='high' if loop.index <= 4 else '') }}
 		</li>
