Show news descriptions in cards

--- a/src/includes/news-card.njk
+++ b/src/includes/news-card.njk
@@ -21,5 +21,8 @@
 				{{- news.data.title | markdownInline | safe -}}
 			</a>
 		</h2>
+		<p>
+			{{- news.data.description -}}
+		</p>
 	</article>
 {% endmacro %}
