--- a/src/includes/related.njk
+++ b/src/includes/related.njk
@@ -6,7 +6,7 @@
 		<ul class="news-list">
 		{%- for item in news %}
 			<li>
-				{{ newsCard(news=item) }}
+				{{ newsCard(news=item, level=3) }}
 			</li>
 		{%- endfor %}
 		</ul>
