--- a/src/pages/feed/index.njk
+++ b/src/pages/feed/index.njk
@@ -9,7 +9,7 @@
 		<name>{{ meta.author }}</name>
 		<email>{{ meta.email }}</email>
 	</author>
-	{%- for item in collections.news | limit(25) %}
+	{%- for item in collections.news | reverse | limit(25) %}
 		<entry>
 			<title>{{ item.data.title | plainText | safe }}</title>
 			<link href="{{ meta.domain + item.url }}"/>
