--- a/src/pages/home/index.njk
+++ b/src/pages/home/index.njk
@@ -1,11 +1,33 @@
 {% from 'news-card.njk' import newsCard %}
 
-<ul class="news-list">
-{%- for item in pagination.items %}
-	<li>
-		{{ newsCard(news=item, fetchpriority='high' if loop.index <= 4 else '') }}
-	</li>
-{%- endfor %}
-</ul>
+<div class="archive">
+	<section class="archive__section">
+		<h2 class="archive__title">
+			<a href="/news/">All news</a>
+			<span>({{ collections.news | length }})</span>
+		</h2>
+		<ul class="news-list">
+		{%- for item in collections.news | reverse | limit(4) %}
+			<li>
+				{{ newsCard(news=item, level=3, fetchpriority='high') }}
+			</li>
+		{%- endfor %}
+		</ul>
+	</section>
 
-{% include 'pagination.njk' %}
+{%- for tag in ['html', 'css', 'js', 'a11y'] %}
+	<section class="archive__section">
+		<h2 class="archive__title">
+			<a href="/tags/{{ tag }}/">{{ labels[tag] }} news</a>
+			<span>({{ collections[tag] | length }})</span>
+		</h2>
+		<ul class="news-list">
+		{%- for item in collections[tag] | reverse | limit(4) %}
+			<li>
+				{{ newsCard(news=item, level=3) }}
+			</li>
+		{%- endfor %}
+		</ul>
+	</section>
+{%- endfor %}
+</div>
