Refactor archive, prepare featured

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -15,8 +15,8 @@
 	</a>
 	<search-field
 		class="header__search search"
+		aria-label="Search archive"
 		role="search"
-		aria-label="News archive search"
 	>
 		<div class="search__panel">
 			<input
