--- a/src/styles/blocks/news-list.css
+++ b/src/styles/blocks/news-list.css
@@ -5,18 +5,14 @@
 	grid-template-columns: repeat(
 		auto-fill, minmax(288px, 1fr)
 	);
+	align-items: start;
 	row-gap: 2.5rem;
 	column-gap: 1rem;
 	margin: 0;
 	padding: 0;
 	list-style: none;
 
-	/*
-		g = 16px (1rem) x 5
-		card = 288px x 4
-		g + card + g + card + g + card + g + card + g
-		= 1232px
-	*/
+	/* cards (288px x 4) + gaps (16px x 5) = 1232px */
 
 	@media (width < 1232px) {
 		&[data-size='8'] {
@@ -25,4 +21,10 @@
 			}
 		}
 	}
+}
+
+/* Item */
+
+.news-list__item {
+	display: contents;
 }
