Add featured cover sizes

--- a/src/includes/news-card.njk
+++ b/src/includes/news-card.njk
@@ -1,6 +1,7 @@
 {% from 'cover.njk' import cover %}
 
-{% set coverSizes = '(min-width: 1232px) 288px, (min-width: 928px) calc(33.3vw - 4rem), (min-width: 624px) calc(50vw - 3rem), calc(100vw - 2rem)' %}
+{% set normalCoverSizes = '(min-width: 1232px) 288px, (min-width: 928px) calc(33.3vw - 4rem), (min-width: 624px) calc(50vw - 3rem), calc(100vw - 2rem)' %}
+{% set featuredCoverSizes = '(min-width: 1232px) 592px, (min-width: 928px) calc(66.6vw - 3rem), calc(100vw - 2rem)' %}
 
 {% macro newsCard(news, level, fetchpriority='', featured=false) %}
 	<article
@@ -10,7 +11,7 @@
 	>
 		{{ cover(
 			url=news.url,
-			sizes=coverSizes,
+			sizes=featuredCoverSizes if featured else normalCoverSizes,
 			fetchpriority=fetchpriority,
 			alt=news.data.alt
 		) }}
