Style ellipsis in pagination

--- a/src/styles/blocks/pagination.css
+++ b/src/styles/blocks/pagination.css
@@ -47,6 +47,11 @@
 	}
 
 	span {
+		&[aria-hidden] {
+			width: 1.25rem;
+			color: var(--color-text-secondary);
+		}
+
 		&:first-child,
 		&:last-child {
 			&::before {
